# mimic

./: LICENSE  README.md  mimic.conf.example  pyproject.toml
extras/k6/: client.js
extras/systemd/: code-server@.service  jupyterlab@.service
mimic/: __init__.py
mimic/client/: __init__.py  client.py  socket.py
mimic/client/applications/: __init__.py  vscode.py
mimic/client/web/: flask.py
mimic/client/web/templates/: index.html
mimic/common/: context.py  utils.py
mimic/server/: client.py  server.py  socket.py
mimic/server/web/: flask.py
